--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
         <!-- app's own JavaScript -->
         <script src="/js/scripts.js"></script>
 
-        <title>findmy.city test!
+        <title>test git
             
         </title>
 
